<resources>
    <string name="app_name">AlittleShare</string>
    <string name="login">LOGIN</string>
    <string name="inputUsername">Enter Display Name</string>
    <string name="inputEmail">Enter email</string>
    <string name="inputPassword">Enter Password</string>
    <string name="inputConfirmPassword">Enter Confirm Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="aboutUs">About Us</string>
    <string name="signInWithEmail">Sign In With Email</string>
    <string name="signInWithGoogle">Sign In With Google</string>
    <string name="signInWithFacebook">Sign In With Facebook</string>
    <string name="go">GO</string>
    <string name="or">OR</string>
    <string name="doesnothaveAccount">Don\'t have an account?</string>
    <string name="createOne">Create One</string>
    <string name="facebook_app_id">256580089410895</string>
    <string name="fb_login_protocol_scheme">fb256580089410895</string>
    <string name="action_settings">Settings</string>
    <string name="searchDesc">Search Description</string>
    <string name="searchHint">Search Something</string>

    <string name="app_Name">AlittleShare</string>
    <string name="menu_home">Home</string>
    <string name="logOut">Log Out</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_account">Account</string>
    <string name="createAccount">Create Account</string>
    <string name="settingtitle">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="stayLoggedIn">Stay Logged In</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="accountDetails">ACCOUNT DETAILS</string>
    <string name="accountName">Name / Organization\'s Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="confirm">Confirm</string>

    <string name="title_home">Home</string>
    <string name="title_event">Event</string>
    <string name="title_chat">Chat</string>
    <string name="title_others">Others</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="queryHintsforHome">Search Organizations, Event…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_forgotPassword">FORGOT PASSWORD ?</string>
    <string name="content_forgotPassword">Use your email to reset your password.</string>
    <string name="sendRequest">Send Request</string>
    <string name="title_other_cap">OTHERS</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_change_password_cap">CHANGE PASSWORD</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="resetPass">Reset</string>
    <string name="title_account_cap">ACCOUNT</string>
    <string name="title_name">Title</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setupprofileimage">SET UP PROFILE IMAGE</string>
    <string name="setupdisplayname">SET UP DISPLAY NAME</string>
    <string name="displayname">Display Name</string>
    <string name="complete">Complete</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="agree">I agree to the</string>
    <string name="termAndCondition">terms &amp; conditions</string>
    <string name="setupprofile">SET UP ORGANIZATION PROFILE</string>
    <string name="organizationNotice">* Note: Organization profile will be verified before published</string>
    <string name="captureImage">Capture an Image</string>
    <string name="browseImage">Browse an Image</string>
    <string name="cancel">Cancel</string>
    <string name="longClickImageNote">Long Click the image to Choose Again</string>
    <string name="organizationDetailsName">Organization\'s Name</string>
    <string name="organizationRegistrationNumber">Registration Number</string>
    <string name="organizationDescription">Description</string>
    <string name="organizationTypePrompt">--Select organization type--</string>
    <string name="title_organization_profile">ORGANIZATION PROFILE</string>
    <string name="verifiedStatus">Verified Status</string>
    <string name="organizationProfileNotice">* Note: Please contact our administration support if you would like to edit organization\'s profile</string>
    <string name="contactUs">Contact Our Support</string>
    <string name="phoneNum">03–321 4321</string>
    <string name="aboutUsDes">A Little Share (ALS) is a charity mobile application that provide a charity platform to the user.
        The charity platform allows the user to represent the contributor or organization to raise the charity event.
        The mobile application also includes the several functions which are chat system, published event.</string>
    <string name="emptyEvent">No Event has been created</string>
    <string name="emptyEventFound">No Event has been found</string>
    <string name="eventTitle">CREATE EVENT</string>
    <string name="eventName">FundRaising Event Title</string>
    <string name="eventDes">Talk about Your Event</string>
    <string name="eventStartDate">Start Date</string>
    <string name="eventEndDate">End Date</string>
    <string name="eventTargetFund">Target Funds</string>
    <string name="eventImage">Select Main Image For the Event</string>
    <string name="eventDetaisTitle">EVENT DETAILS</string>
    <string name="currentFund">Current Fund</string>
    <string name="targetFund">Target Fund</string>
    <string name="durationTitle">DURATION</string>
    <string name="fundTitle">Funds</string>
    <string name="donate">Donate</string>
    <string name="viewDetails">View Details</string>
    <string name="uid">UID</string>
    <string name="message">Message</string>
    <string name="raisedEventList">Raised Event List</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="duration">Duration</string>
    <string name="createdDate">Created Date</string>
    <string name="selectDonateAmount">Select Donate Amount</string>
    <string name="selectPaymentMethod">Select Payment Method</string>
    <string name="rm10">RM 10</string>
    <string name="rm20">RM 20</string>
    <string name="rm50">RM 50</string>
    <string name="rm100">RM 100</string>
    <string name="otherAmount">Other Amount</string>
    <string name="inputAmount">Enter Amount</string>
    <string name="payWithStripe">Pay With Stripe</string>
    <string name="sendMessage">Send Message</string>
    <string name="addFriend">Add Friend</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="organizationInformation">Organization Information</string>
    <string name="personalInformation">Personal Information</string>
    <string name="contribution">Contribution</string>
    <string name="type_message_here">Type message here…</string>
    <string name="attachFiles">attachFiles</string>
    <string name="donationHistory">Donation History</string>
    <string name="empty_donation_history_found">No Donation History Found</string>
    <string name="payWithPayPal">Pay With PayPal</string>
    <string name="contributor">Contributor</string>
    <string name="organization">Organization</string>
    <string name="accountType">Select Account Type</string>
    <string name="becomeOurContributor">Become Our Contributor</string>
    <string name="becomeOurOrganization">Become Our Organization</string>
    <string name="empty_message_chat_found">No Message Chat Found</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="helpPeople">Help people with one click</string>
    <string name="publish">Publish</string>
    <string name="changeProfileImage">Change Image</string>
    <string name="organizationProfile">Organization Profile</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="view">View</string>
    <string name="percent">per%</string>
    <string name="emptyOrganization">No Organization has been found</string>
    <string name="pay_with_razorpay">Pay With RazorPay</string>
    <string name="no_user_found_go_to_search_page_and_follow_others">No User Found. Go to Search Page and follow others</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="event">Event</string>
    <string name="more"><![CDATA[More >>]]></string>
    <string name="download_as_pdf">Download as pdf</string>
    <string name="camera">Camera</string>
    <string name="document">Document</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>


</resources>