<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_event_available_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_raised_event_list"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/raisedEventList" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_donation_history"
            android:icon="@drawable/ic_outline_payment_24"
            android:title="@string/donationHistory"/>
    </group>
</menu>