<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:orientation="vertical"
    tools:context=".ui.home.HomeDonateActivity">

    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDonateAmount"
        style="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:id="@+id/homeDonateRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/homeDonateRM10RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rm10"
            android:onClick="onDonateAmountSelected"/>

        <RadioButton
            android:id="@+id/homeDonateRM20RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rm20"
            android:onClick="onDonateAmountSelected"/>

        <RadioButton
            android:id="@+id/homeDonateRM50RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rm50"
            android:onClick="onDonateAmountSelected"/>

        <RadioButton
            android:id="@+id/homeDonateRM100RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rm100"
            android:onClick="onDonateAmountSelected"/>

        <RadioButton
            android:id="@+id/homeDonateOtherAmountRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherAmount"
            android:onClick="onDonateAmountSelected"/>

        <EditText
            android:id="@+id/homeDonateOtherAmountEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/inputAmount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:visibility="gone"/>

    </RadioGroup>

    <View
        android:id="@+id/homeDonateSelectPaymentMethodView"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:alpha="0.5"
        android:background="@color/colorAccent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/homeDonateSelectPaymentMethodTextView"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPaymentMethod"
        style="@style/TextAppearance.AppCompat.Title"
        android:visibility="gone"/>

    <RadioButton
        android:id="@+id/homeDonatePayWithStripeRadioButton"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payWithStripe"
        android:visibility="gone"/>

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/homeDonateCardInputWidget"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/homeDonateConfirmButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_button_main"
        android:text="@string/confirm"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        app:rippleColor="@color/colorAccent"
        />

</LinearLayout>