<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.als.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_raised_event_list"
        android:name="com.example.als.ui.raised_event.RaisedEventListFragment"
        android:label="@string/raisedEventList"
        tools:layout="@layout/fragment_raised_event" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.als.ui.message.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/nav_donation_history"
        android:name="com.example.als.ui.donationHistory.DonationHistoryFragment"
        android:label="@string/donationHistory"
        tools:layout="@layout/fragment_donation_history"/>
</navigation>