<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.more.SettingFragment">

    <Button
        android:id="@+id/viewAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_account"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/ic_baseline_person_color_accent_24"
        android:drawableTint="@color/colorWhite" />

    <Button
        android:id="@+id/viewDonationHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donationHistory"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/ic_outline_payment_24"
        android:drawableTint="@color/colorWhite" />

    <Button
        android:id="@+id/viewChangePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_change_password"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/ic_outline_change_circle_24"
        android:drawableTint="@color/colorWhite" />

    <Button
        android:id="@+id/viewAboutUsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/ic_outline_info_24"
        android:drawableTint="@color/colorWhite"/>

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:textColor="@color/colorWhite"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorRed"
        android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
        android:drawableTint="@color/colorWhite"/>

</LinearLayout>