<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/card_view_border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/homeEventListTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/eventTitle"
        style="@style/TextAppearance.AppCompat.Title" />

    <ImageView
        android:id="@+id/homeEventListImageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:src="@drawable/select_image_view"
        android:layout_gravity="center"
        android:contentDescription="@string/eventImage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/card_view_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="italic"
            android:padding="5dp"
            android:hint="@string/organizationDescription"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/homeEventListDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:hint="@string/eventDes"
            android:textSize="14sp" />

        <View
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:alpha="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:hint="@string/eventStartDate"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/homeEventListStartDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:hint="@string/eventStartDate"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:hint="@string/eventEndDate"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/homeEventListEndDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:hint="@string/eventEndDate"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/card_view_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:hint="@string/fundTitle"
            android:textSize="16sp"
            style="@style/TextAppearance.AppCompat.Title" />

        <ProgressBar
            android:id="@+id/homeEventListProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:minWidth="320dp"
            android:scaleY="3"
            android:max="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/homeEventListCurrentFundTextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/currentFund"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"/>

            <TextView
                android:id="@+id/homeEventListTargetFundTextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/targetFund"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="end" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/homeEventListDonateButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_button_red_filled"
            android:onClick="signInWithEmailPassword"
            android:text="@string/donate"
            android:textColor="@color/colorWhite"
            android:clickable="true"
            android:focusable="true"
            app:rippleColor="@color/colorAccent"/>

        <Button
            android:id="@+id/homeEventListViewDetailsButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_button_main_filled"
            android:onClick="signInWithEmailPassword"
            android:text="@string/viewDetails"
            android:textColor="@color/colorWhite"
            android:clickable="true"
            android:focusable="true"
            app:rippleColor="@color/colorAccent"/>

    </LinearLayout>


</LinearLayout>