<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".AboutUsActivity">

    <TextView
        android:id="@+id/aboutUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/aboutUs"
        style="@style/TextAppearance.AppCompat.Title" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/aboutUsImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUsTitle"/>

    <TextView
        android:id="@+id/aboutUsDescription"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUsImageView"
        android:text="@string/aboutUsDes"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="italic"/>


    <TextView
        android:layout_margin="10dp"
        android:id="@+id/aboutUsContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactUs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUsDescription"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUsContact"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/card_view_border">

        <ImageView
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_outline_phone_24"
            android:contentDescription="@string/phone"
            app:tint="@color/colorAccent"
            android:layout_gravity="center"/>

        <TextView
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneNum"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/organizationPhoneTextView"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>